--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
+    "jose": "^5.2.3",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
