--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "postcss": "8.4.30",
-    "qrcode.react": "^3.1.0",
+    "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
