--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "13.5.1",
+    "framer-motion": "^11.13.1",
     "html5-qrcode": "^2.3.8",
     "input-otp": "^1.2.4",
     "jose": "^5.2.3",
