--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hashgraph/sdk": "^2.57.2",
     "@hookform/resolvers": "^3.9.0",
-    "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/postgrest-js": "^1.12.0",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.39.7",
     "@next/swc-wasm-nodejs": "13.5.1",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -42,19 +40,28 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/postgrest-js": "^1.12.0",
+    "@supabase/supabase-js": "^2.39.7",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.7.7",
+    "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.15",
+    "ethers": "5.7.2",
     "framer-motion": "^11.13.1",
+    "hardhat": "^2.22.18",
     "html5-qrcode": "^2.3.8",
     "input-otp": "^1.2.4",
     "jose": "^5.2.3",
@@ -75,10 +82,9 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "utf-8-validate": "^6.0.3",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8",
-    "bufferutil": "^4.0.8",
-    "utf-8-validate": "^6.0.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.14.0",
