--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -44,11 +44,12 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/postgrest-js": "^1.12.0",
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^5.66.0",
     "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "autoprefixer": "10.4.15",
     "axios": "^1.7.7",
     "bufferutil": "^4.0.8",
@@ -59,7 +60,7 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.15",
+    "eslint-config-next": "15.1.7",
     "ethers": "5.7.2",
     "framer-motion": "^11.13.1",
     "hardhat": "^2.22.18",
@@ -67,17 +68,18 @@
     "input-otp": "^1.2.4",
     "jose": "^5.2.3",
     "lucide-react": "^0.446.0",
-    "next": "^14.2.15",
+    "next": "15.1.7",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "postcss": "8.4.30",
     "qrcode": "^1.5.4",
-    "react": "^18.2.0",
+    "react": "19.0.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
@@ -90,5 +92,9 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0"
+  },
+  "resolutions": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
   }
 }
