--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "20.6.2",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@types/react-select": "^5.0.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.7.7",
     "bufferutil": "^4.0.8",
@@ -76,8 +77,9 @@
     "react": "19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.3",
+    "react-select": "^5.10.1",
     "recharts": "^2.12.7",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
