--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "postcss": "8.4.30",
+    "pyload": "^0.1.2",
     "qrcode": "^1.5.4",
     "react": "19.0.0",
     "react-day-picker": "^8.10.1",
