navbar'a dil seçici eklendi - Dropdown menülü dil seçici bileşeni eklendi - Masaüstü ve mobil görünüme entegre edildi - TR/EN dil seçenekleri eklend

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^5.66.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.6.2",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
@@ -68,8 +69,10 @@
     "html5-qrcode": "^2.3.8",
     "input-otp": "^1.2.4",
     "jose": "^5.2.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
     "next": "15.1.7",
+    "next-intl": "^4.0.2",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "postcss": "8.4.30",
