--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "next-intl": "^4.0.2",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
+    "openai": "^5.0.1",
     "postcss": "8.4.30",
     "pyload": "^0.1.2",
     "qrcode": "^1.5.4",
